--- a/01-my-app/src/components/style/ExternalStyle.css
+++ b/01-my-app/src/components/style/ExternalStyle.css
@@ -1,5 +1,5 @@
-.ozluSoz{
-    color: rgb(238, 110, 174);
-    font-size: 30px;
-    font-weight: bold;
+.ozlusoz {
+  color: maroon;
+  font-weight: 700;
+  font-size: 1.2rem;
 }
