--- a/01-my-app/src/components/profile/profile.css
+++ b/01-my-app/src/components/profile/profile.css
@@ -1,20 +1,22 @@
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+
 .person-card {
-  border: 1px solid rgb(170, 170, 170);
   display: inline-block;
-  border-radius: 10px;
+  border: 1px solid rgb(172, 172, 172);
+  border-radius: 0.7rem;
   width: 200px;
-  font-family: "Rubik", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .person-bg {
-  background-size: cover;
-  background-position: center;
   height: 10rem;
+  background-size: cover;
+  background-position: center center;
   background-repeat: no-repeat;
-  border-radius: 10px 10px 0 0;
+  border-radius: 0.7rem 0.7rem 0 0;
   position: relative;
 }
+
 .person-bg-transparent {
   background-color: rgba(255, 0, 0, 0.5);
   position: absolute;
@@ -25,8 +27,9 @@
   z-index: 10;
   border-radius: 0.7rem 0.7rem 0 0;
 }
+
 .person-content {
-  padding: 0 1rem 1rem 1rem;
+  padding: 0 1rem 0rem 1rem;
   text-align: center;
   position: relative;
   top: -50px;
@@ -37,16 +40,17 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  border: 6px solid rgba(255, 255, 255, 0.3);
+  border: 4px solid rgba(255, 255, 255, 0.603);
 }
 
-.person-content h6 {
-  color: grey;
-  margin: 0;
-}
 .person-content h3 {
   margin: 0;
   margin-top: 1rem;
+}
+
+.person-content h6 {
+  color: gray;
+  margin: 0;
 }
 
 .person-stat {
